--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,23 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/css/plugins/remixicon.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/css/plugins/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/css/plugins/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -40,4 +57,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script src="./assets/js/jquery-3.6.0.js" crossorigin></script>
+  ;
+  <script src="./assets/js/bootstrap.bundle.min.js" crossorigin></script>
+  ;
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"
+    crossorigin
+  ></script>
+  ;
 </html>
